Message edit no longer cut off for first messages

--- a/app/assets/stylesheets/components/messages/message_list.css
+++ b/app/assets/stylesheets/components/messages/message_list.css
@@ -6,8 +6,7 @@
   flex-direction: column;
   width: 100%;
   background-color: lightgoldenrodyellow;
-  padding: 10px 0px 0px 0px;
-
+  padding: 0px 0px 0px 0px;
 }
 
 .message-list-list{
@@ -16,4 +15,9 @@
   display:flex;
   flex-direction: column;
   overflow-y: auto;
+  position: relative;
+}
+
+.message-list-list li:first-of-type{
+  padding-top: 16px;
 }
